<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#777"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/row_iv_movie_thumb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/row.thumb_description"
                tools:src="@drawable/backdrop_noimage"
                android:transitionName="@string/transition_photo"/>

            <TextView
                android:id="@+id/row_tv_title"
                style="@style/movie_title_on_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:text="@string/dummy_movie_name" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RatingBar
                android:id="@+id/row_rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:numStars="5"
                android:stepSize="0.1"
                tools:rating="@string/dummy_rating" />

            <TextView
                android:id="@+id/row_tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:textColor="#fff"
                android:textSize="12sp"
                tools:text="(2017)" />

        </RelativeLayout>
    </LinearLayout>

</layout>